:adhesive_bandage: fixed horizontal overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,5 @@ $theme-colors: (
 
 body {
   background-color: #0C0404;
+  overflow-x: hidden;
 }
